--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 1rem;
   background-color: #004260; /* Use the primary color */
-  height: 20px;
+  height: 3vh;
 }
 
 .header__item {
