--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 @font-face {
     font-family: 'Exo';
-    src: url('../components/fonts/exo.bold.otf') format('opentype');
+    src: url('../fonts/exo.bold.otf') format('opentype');
 }
 
 
